# py-project-scaffolding

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  ruff.toml
tests/: test_pkg_import.py
